# chatapi

./: LICENSE  Makefile  README.md  pyproject.toml
chatapi/: __init__.py  core.py
test/: test_chatapi.py
