[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "chatapi"
version = "0.1.0"
dependencies = [
  "websocket-client",
]
requires-python = ">= 3.9"
authors = []
description = "Python wrapper for the chat API"
readme = "README.md"
license = "MIT"
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/Charcoal-SE/chatapi.git"
Issues = "https://github.com/Charcoal-SE/chatapi/issues"
